--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,12 +28,60 @@ body {
   font-size: 22px;
 }
 
+/*----------------头部 start-------------*/
+.z-search-wrap {
+  overflow: hidden;
+  margin-left: 350px;
+  position: relative;
+  color: #4a4a4a;
+}
+
+.z-search-wrap .z-search {
+  float: right;
+  width: 180px;
+  height: 40px;
+  margin: 12px 0 0;
+  background-color: #fff;
+  padding: 0 5px;
+  line-height: 40px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  transition: all .3s;
+}
+
+.z-search-wrap .z-search:focus {
+  width: 220px;
+  border-bottom: none;
+}
+
+.z-search-wrap .z-search-btn {
+  float: right;
+  height: 41px;
+  margin: 12px 20% 0 0;
+  background-color: #0B6B77;
+  line-height: 1px;
+  padding: 0 10px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border: none;
+  outline: none;
+  color: rgba(255,255,255,.9);
+}
+
+.z-search-wrap .z-search-btn i {
+  font-size: 1.5rem;
+  height: 40px;
+  line-height: 40px;
+}
+/*----------------头部 end-------------*/
+
+/*----------------最新文章 start-------------*/
 .z-main {
   margin-left: 250px;
 }
-
 .z-list {
   margin: 30px 30px 0;
+  min-height: 300px;
 }
 
 .z-list li {
@@ -168,3 +216,61 @@ body {
   text-align: center;
   margin-bottom: 20px;
 }
+/*----------------最新文章 end-------------*/
+
+/*-------------文章全文详情 start------------*/
+.z-detail {
+  padding: 30px 60px;
+  background-color: rgba(255,255,255,.95);
+}
+
+.z-detail-info div {
+  line-height: 50px;
+  overflow: hidden;
+}
+
+.z-detail-wrap {
+  white-space: normal;
+  overflow: hidden;
+}
+
+.z-art-detail,
+.z-detail-info {
+  margin: 0 5px;
+}
+
+.z-detail-info div:first-child {
+  float: left;
+}
+
+.z-detail-info div:nth-child(2) {
+  float: right;
+}
+
+.z-detail-info div:last-child {
+  overflow: hidden;
+  text-align: center
+}
+
+.z-art-detail {
+  min-height: 300px;
+}
+
+.z-detail-head {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 6px;
+}
+/*-------------文章全文详情 end------------*/
+
+/*-------------文章发表 start------------*/
+.z-post {
+  width: 960px;
+  margin: 0 auto;
+  height: 200px;
+  background-color: rgba(255,255,255,95);
+  box-shadow: 0 1px 10px 0 #999;
+}
+/*-------------文章发表 end------------*/
