--- a/views/zheader.ejs
+++ b/views/zheader.ejs
@@ -15,48 +15,26 @@
 <header class="navbar-fixed" style="z-index: 2000;">
   <nav class="cyan">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo waves-effect waves-dark">Sitewar-blog</a>
+      <a href="/home" class="brand-logo waves-effect waves-dark">Sitewar-blog</a>
       <div class="z-btn-wrap">
       <% if (user) { %>
         <img src="<%=user.head%>">
         <h6><%=user.name%></h6>
-        <a href="logout" class="waves-effect btn white light-blue-text text-accent-3 z-btn">退出</a>
+        <a href="/logout" class="waves-effect btn white light-blue-text text-accent-3 z-btn">退出</a>
       <% } else { %>
-        <a href="login#signin" class="waves-effect btn white light-blue-text text-accent-3 z-btn">登录</a>
-        <a href="login#signup" class="waves-effect btn white light-blue-text text-accent-3 z-btn">注册</a>
+        <a href="/login#signin" class="waves-effect btn white light-blue-text text-accent-3 z-btn">登录</a>
+        <a href="/login#signup" class="waves-effect btn white light-blue-text text-accent-3 z-btn">注册</a>
       <% } %>
+      </div>
+      <div class="z-search-wrap">
+        <form action="/search" method="GET">
+          <button type="submit" class="z-search-btn">
+            <i class="icon-search"></i>
+          </button>
+          <input type="text" class="z-search" name="keyword" placeholder="搜索文章">
+        </form>
       </div>
     </div>
   </nav>
 </header>
 <!-- 头部 end -->
-<!-- 侧边栏 start-->
-<aside class="z-sidenav">
-  <ul>
-    <li><a href="/" class="waves-effect waves-teal">
-    <i class="icon-home icon-large"></i><span>首页</span></a></li>
-    <li><a href="/home" class="waves-effect waves-teal">
-    <i class="icon-book icon-large"></i><span>最新文章</span></a></li>
-    <li><a href="" class="waves-effect waves-teal">
-    <i class="icon-tasks icon-large"></i><span>文章存档</span></a></li>
-    <li><a href="" class="waves-effect waves-teal">
-    <i class="icon-tags icon-large"></i><span>文章标签</span></a></li>
-  </ul>
-  <ul>
-    <li><a href="https://www.facebook.com" class="waves-effect waves-teal" target="_blank">
-      <i class="icon-facebook-sign icon-large"></i><span>FaceBook</span></a>
-    </li>
-    <li><a href="https://github.com/" class="waves-effect waves-teal" target="_blank">
-      <i class="icon-github icon-large"></i><span>GitHub</span></a>
-    </li>
-    <li><a href="http://www.cnblogs.com/" class="waves-effect waves-teal" target="_blank">
-      <i class="icon-pencil icon-large"></i><span>博客园</span></a>
-    </li>
-    <li><a href="https://cnodejs.org/" class="waves-effect waves-teal" target="_blank">
-      <i class="icon-star-half icon-large"></i><span>Node.JS中文社区</span></a>
-    </li>
-  </ul>
-</aside>
-<!-- 侧边栏 end-->
-<!-- 主体内容 start-->
-<section class="z-main">
