文章存档，文章标签完成

--- a/views/zpost.ejs
+++ b/views/zpost.ejs
@@ -1,8 +1,19 @@
 <%- include zheader %>
 
 <section>
-<section class="z-post">
-  
-</section>
+  <section class="z-post container">
+    <div class="row">
+     <input id="z-title" class="col s10 offset-s1" type="text" placeholder="文章标题">
+    </div>
+    <div class="row">
+      <input id="z-tag" class="col s10 offset-s1" type="text" placeholder="文章标签，多个标签以英文逗号隔开">
+    </div>
+    <div class="row">
+      <textarea id="z-textarea" class="col s10 offset-s1 z-text" placeholder="文章内容"></textarea>
+    </div>
+    <div class="row">
+      <a class="col s10 offset-s1 z-publish cyan white-text" href="javascript:void(0);">发布文章</a>
+    </div>
+  </section>
 
 <%- include zfooter %>
