--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,7 @@
+html {
+  line-height: normal;
+}
+
 body {
   background: url('../img/bg/bg.png') repeat;
   background-attachment: fixed;
@@ -79,8 +83,9 @@ body {
 .z-main {
   margin-left: 250px;
 }
+
 .z-list {
-  margin: 30px 30px 0;
+  margin: 30px 30px 60px;
   min-height: 300px;
 }
 
@@ -92,6 +97,7 @@ body {
   transition: all .3s;
 }
 
+.z-simple-list li:hover,
 .z-list li:hover {
   box-shadow: 0 1px 6px 1px #ccc;
 
@@ -144,11 +150,10 @@ body {
   overflow: hidden;
 }
 
-.z-tag-wrap .z-tag {
+.z-tag {
   display: inline-block;
   vertical-align: middle;
   position: relative;
-  background: #ba8f6c;
   height: 26px;
   line-height: 26px;
   color: #fff;
@@ -157,8 +162,16 @@ body {
   margin-right: 40px;
 }
 
+.z-tag-wrap .z-tag {
+  background: #ba8f6c;
+}
+
 .z-tag-wrap .z-tag:before {
   content: "";
+  border-left: 15px solid #ba8f6c;
+}
+
+.z-tag-wrap .z-tag:before {
   position: absolute;
   right: -30px;
   top: 0;
@@ -166,7 +179,6 @@ body {
   border-top: 13px solid transparent;
   border-bottom: 13px solid transparent;
   border-right: 15px solid transparent;
-  border-left: 15px solid #ba8f6c;
 }
 
 .z-more {
@@ -267,10 +279,121 @@ body {
 
 /*-------------文章发表 start------------*/
 .z-post {
-  width: 960px;
-  margin: 0 auto;
-  height: 200px;
   background-color: rgba(255,255,255,95);
   box-shadow: 0 1px 10px 0 #999;
+  padding: 30px 0;
+}
+
+.z-post input,
+.z-post textarea {
+  border-radius: 5px;
+}
+
+#z-edit-title,
+#z-edit-tag,
+#z-title,
+#z-tag {
+  border: 1px solid #9e9e9e;
+  height: 50px;
+  line-height: 50px;
+  margin-bottom: 0;
+}
+
+.z-post .z-text {
+  border: 1px solid #9e9e9e;
+  transition: all 0.3s;
+  min-height: 300px;
+  padding-top: 10px;
+  font-size: 1rem;
+}
+
+#z-edit-title:focus,
+#z-edit-tag:focus,
+#z-title:focus,
+#z-tag:focus,
+.z-post .z-text:focus {
+  border: 1px solid transparent;
+  box-shadow: inset 0 0 8px 0 #26a69a;
+}
+
+.z-edit,
+.z-publish {
+  text-align: center;
+  line-height: 48px;
+  border-radius: 8px;
+}
+
+.z-edit {
+  outline: none;
+  border: none;
 }
 /*-------------文章发表 end------------*/
+
+/*-------------所有标签 start-----------*/
+.z-tags {
+  min-height: 300px;
+  line-height: 40px;
+  text-align: left;
+  margin: 60px;
+}
+
+.z-tags h4 {
+  margin-bottom: 4%;
+}
+
+.z-tags a {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  height: 36px;
+  line-height: 36px;
+  color: #fff;
+  text-align: center;
+  padding: 0 20px;
+  margin: 0 50px 20px 0;
+}
+
+.z-tag i {
+  position: absolute;
+  right: -48px;
+  top: 0;
+  width: 0;
+  border-top: 18px solid transparent;
+  border-bottom: 18px solid transparent;
+  border-right: 24px solid transparent;
+}
+
+/*-------------所有标签 end-----------*/
+
+/*------------简单文章列表 start-----------*/
+.z-simple-list {
+  margin: 30px 30px 60px 60px;
+  min-height: 300px;
+}
+
+.z-simple-list li {
+  margin: 0 0 10px 20px;
+  border: 1px solid #ccc;
+  background: rgba(255,255,255,.8);
+  border-radius: 5px;
+  transition: all .3s;
+}
+
+.z-simple-list li[data-title] {
+  margin-left: -20px;
+  overflow: hidden;
+}
+
+.z-simple-list li[data-title] span {
+  float: right;
+  line-height: 50px;
+  margin-right: 30px;
+}
+
+.z-simple-list li h3 {
+  float: left;
+  margin: 0;
+  text-indent: 20px;
+}
+/*------------简单文章列表 end-----------*/
+
