--- a/views/zindex.ejs
+++ b/views/zindex.ejs
@@ -21,13 +21,17 @@
     <li class="nav-wrapper">
      <a href="javascript:void(0);" class="brand-logo cyan white-text z-navbar">Sitewar-Blog</a>
     </li>
-    <li><a href="home" class="z-link">
+    <li><a href="/home" class="z-link">
       <i class="icon-home icon-large"></i><span>最新文章</span>
     </a></li>
-    <li><a href="#!" class="z-link">
+    <li><a href="/archive" class="z-link">
       <i class="icon-tasks icon-large"></i><span>文章存档</span></a></li>
-    <li><a href="#!" class="z-link">
+    <li><a href="/tags" class="z-link">
       <i class="icon-tags icon-large"></i><span>所有标签</span></a></li>
+    <% if (user) { %>
+      <li><a href="/u/<%= user.name %>" class="z-link">
+      <i class="icon-tags icon-large"></i><span>我的文章</span></a></li>
+    <% } %>
     <li><hr></li>
     <li class="row">
     <div class="col s12 no-padding">
