--- a/views/zsidenav.ejs
+++ b/views/zsidenav.ejs
@@ -5,10 +5,10 @@
     <i class="icon-home icon-large"></i><span>首页</span></a></li>
     <li><a href="/home" class="waves-effect waves-teal <% if(title == "最新文章") { %>active<% } %>">
     <i class="icon-book icon-large"></i><span>最新文章</span></a></li>
-    <li><a href="" class="waves-effect waves-teal">
+    <li><a href="/archive" class="waves-effect waves-teal <% if(title == "文章存档") { %>active<% } %>">
     <i class="icon-tasks icon-large"></i><span>文章存档</span></a></li>
-    <li><a href="" class="waves-effect waves-teal">
-    <i class="icon-tags icon-large"></i><span>文章标签</span></a></li>
+    <li><a href="/tags" class="waves-effect waves-teal <% if(title == "所有标签") { %>active<% } %>">
+    <i class="icon-tags icon-large"></i><span>所有标签</span></a></li>
     <% if (user) { %>
       <li><a href="/u/<%= user.name %>" class="waves-effect waves-teal <% if(title == "我的文章") { %>active<% } %>">
       <i class="icon-tags icon-large"></i><span>我的文章</span></a></li>
