--- a/views/zfooter.ejs
+++ b/views/zfooter.ejs
@@ -7,6 +7,7 @@
 <script src="/js/lib/jquery-1.10.2.min.js"></script>
 <script src="/js/lib/materialize.min.js"></script>
 <script src="/js/lib/laypage.js"></script>  
+<script src="/js/lib/jquery.confirm.js"></script>
 <script src="/js/home.js"></script>
 </body>
 </html>
