--- a/views/zdetail.ejs
+++ b/views/zdetail.ejs
@@ -24,7 +24,7 @@
         <div>发表日期：<%= post.time.minute %></div>
       </div>
       <div></div>
-      <div class="z-art-detail">
+      <div class="z-art-detail markdown">
         <%- post.post %>
       </div>
     </div>
