--- a/views/zheader.ejs
+++ b/views/zheader.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/css/lib/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/css/lib/laypage.css">
   <link rel="stylesheet" type="text/css" href="/css/lib/jquery.confirm.css">
+  <link rel="stylesheet" type="text/css" href="/css/lib/markdown.css">
   <link rel="stylesheet" type="text/css" href="/css/home.css">
 </head>
 <body class="body-wrap">
